Update MO2Grid3D to split the core and normal single-particle orbitals.
git-svn-id: http://qmcpack.googlecode.com/svn@479 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -64,6 +64,7 @@ SET(MAINSRCS
 SET(MOSRCS 
   ${WFSRCS}
   ${QMCDRIVERS}
+  ParticleSetPool.cpp
   QMCAppBase.cpp
   MO2Grid3D.cpp 
   mo2grid3d_main.cpp
