Added LR classes
git-svn-id: http://qmcpack.googlecode.com/svn@567 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -21,6 +21,9 @@ SET(WFSRCS
   ../QMCHamiltonians/LocalPPotential.cpp
   ../QMCHamiltonians/NonLocalPPotential.cpp
   ../QMCHamiltonians/LocalCorePolPotential.cpp
+  ../LongRange/StructFact.cpp
+  ../LongRange/KContainer.cpp
+  ../LongRange/LPQHIBasis.cpp
 )
 
 ####################################
