Add LongRange/KContainer.cpp and LongRange/StructFact.cpp to PARTICLE and libqmc.a.
git-svn-id: http://qmcpack.googlecode.com/svn@583 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/CMakeLists.txt
+++ b/trunk/src/CMakeLists.txt
@@ -26,6 +26,8 @@ SET(PARTICLE
   Particle/MCWalkerConfiguration.cpp 
   Particle/DistanceTable.cpp
   Particle/HDFWalkerIO.cpp
+  LongRange/KContainer.cpp
+  LongRange/StructFact.cpp
 )
 
 SET(PARTICLEIO
