Replace VMC_OPT by QMCOptimize.
git-svn-id: http://qmcpack.googlecode.com/svn@597 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/trunk/src/QMCApp/CMakeLists.txt
+++ b/trunk/src/QMCApp/CMakeLists.txt
@@ -33,9 +33,8 @@ SET(QMCDRIVERS
   ../QMCDrivers/DummyQMC.cpp
   ../QMCDrivers/VMC.cpp
   ../QMCDrivers/VMCParticleByParticle.cpp
-  ../QMCDrivers/VMC_OPT.cpp
+  ../QMCDrivers/QMCOptimize.cpp
   ../QMCDrivers/MolecuDMC.cpp
-  ../QMCDrivers/DMCParticleByParticle.cpp
   ../QMCDrivers/ReptationMC.cpp
   ../QMCDrivers/PolymerEstimator.cpp
   ../Estimators/ScalarEstimatorManager.cpp
@@ -43,7 +42,13 @@ SET(QMCDRIVERS
   ../QMCDrivers/VMCPbyPMultiple.cpp
   ../QMCDrivers/RQMCMultiple.cpp
   ../Estimators/MultipleEnergyEstimator.cpp
+  ../QMCDrivers/DMCParticleByParticle.cpp
 )
+
+####################################
+# Test code to debug DMCParticleByParticle
+#  ../QMCDrivers/DMCParticleByParticleDebug.cpp
+####################################
 
 ####################################
 #sources for new qmcapp, general QMC code to handle multiple
