--- a/trunk/src/QMCTools/CMakeLists.txt
+++ b/trunk/src/QMCTools/CMakeLists.txt
@@ -21,14 +21,20 @@ SET(CASINO
 LINK_LIBRARIES(${FORTRAN_LIBS} 
 ${LAPACK_LIBRARY} 
 ${BLAS_LIBRARY} 
-${BLAS_EXTRA_LIBRARY}
-${CMAKE_THREAD_LIBS_INIT}
 )
+
+IF(INTEL_MKL)
+  LINK_LIBRARIES(${INTEL_GUIDE_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
+ELSE(INTEL_MKL)
+  LINK_LIBRARIES(${CMAKE_THREAD_LIBS_INIT})
+ENDIF(INTEL_MKL)
 
 #ADD_EXECUTABLE(gto2grid gto2grid.cpp ${QMCTOOLS})
 #TARGET_LINK_LIBRARIES(gto2grid qmc qmcbase)
 #ADD_EXECUTABLE(gto2slater gto2slater.cpp ${QMCTOOLS})
 #TARGET_LINK_LIBRARIES(gto2slater qmcbase)
+#ADD_EXECUTABLE(boostrandom random.cpp)
+#TARGET_LINK_LIBRARIES(boostrandom qmcbase)
 ADD_EXECUTABLE(convert4qmc ${CASINO})
 TARGET_LINK_LIBRARIES(convert4qmc qmc qmcbase)
 #ADD_EXECUTABLE(spline spline.cpp)
