--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -84,6 +84,10 @@ IF(FOUND_HDF5)
   SET(HAVE_LIBHDF5 1)
   INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
   LINK_LIBRARIES(${HDF5_LIBRARY})
+  INCLUDE(${CMAKE_ROOT}/Modules/FindZLIB.cmake)
+  IF(ZLIB_FOUND)
+    LINK_LIBRARIES(${ZLIB_LIBRARY})
+  ENDIF(ZLIB_FOUND)
 ENDIF(FOUND_HDF5)
 
 IF(FOUND_GSL)
