--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -61,9 +61,12 @@ INCLUDE(${PROJECT_CMAKE}/FindLibxml2.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindLapack.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindHDF5.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindGSL.cmake)
-INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
-INCLUDE(${PROJECT_CMAKE}/FindSprng.cmake)
 INCLUDE(${PROJECT_CMAKE}/FindBoost.cmake)
+IF(NOT FOUND_BOOST)
+  INCLUDE(${PROJECT_CMAKE}/FindBlitz++.cmake)
+  INCLUDE(${PROJECT_CMAKE}/FindSprng.cmake)
+ENDIF(NOT FOUND_BOOST)
+
  
 IF(QMC_MPI)
   INCLUDE(${PROJECT_SOURCE_DIR}/CMake/addMPI.cmake)
